After Revert: Fixed Task Manager Iframe alignment, URL, and added a loader

--- a/frontend/src/containers/TaskManagement/taskmanager.scss
+++ b/frontend/src/containers/TaskManagement/taskmanager.scss
@@ -1,15 +1,14 @@
-.container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  padding-top: 56.25%;
-}
 .responsive-iframe {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 10%;
+  left: 15%;
   bottom: 0;
   right: 0;
-  width: 100%;
+  width: 80%;
   height: 100%;
+}
+.preload {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
